[package]
name = "meadowlark"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
edition = "2021"
license = "GPL-3.0"


[dependencies]
# vizia = {path = "../vizia", features = ["meadowlark"]}
vizia = {git = "https://github.com/vizia/vizia", branch = "main"}
meadowlark-core-types = { git = "https://github.com/MeadowlarkDAW/meadowlark-core-types", branch = "main", features = ["serde-derive", "vizia-derive"] }
dropseed = { path = "../dropseed", features = ["clap-host", "cpal-backend"] }
log = "0.4.17"
fast_log = "1.5.16"
basedrop = "0.1.2"
cpal = "0.13.5"
crossbeam = "0.8.1"
rtrb = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.9.1"


[profile.release]
lto = true

[profile.dev.package.vizia_core]
opt-level = 2
[profile.dev.package.vizia_winit]
opt-level = 2
[profile.dev.package.femtovg]
opt-level = 2
